--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="./img/logo.png" alt="Akademnashr logo" width="227" height="60">
         </a>
         <nav class="sitenav">
-            <ul>
+            <ul class="sitenav-list">
                 <li class="sitenav-link"><a href="#">Bosh sahifa</a></li>
                 <li class="sitenav-link"><a href="#">Kitoblar</a></li>
                 <li class="sitenav-link"><a href="#">Aksiyalar</a></li>
@@ -117,7 +117,7 @@
         <hr class="site-footer-divider">
         <div>
 
-            <ul>
+            <ul class="site-footer-links">
                 <li>
                     <a href="#">Bosh sahifa</a>
                 </li>
@@ -134,7 +134,7 @@
                     <a href="#">Kontaktlar</a>
                 </li>
             </ul>
-            <ul>
+            <ul class="site-footer-links">
                 <li><a href="#">Ilmiy nashrlar</a></li>
                 <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
                 <li><a href="#">Ma’rifiy nashrlar</a></li>
@@ -143,12 +143,12 @@
                 <li><a href="#">Abituriyentlar uchun</a></li>
                 <li><a href="#">Bolalar uchun</a></li>
             </ul>
-            <ul>
+            <ul class="site-footer-links">
                 <li><a href="#">Ko’p so’raladigan savollar</a></li>
                 <li><a href="#">Yetkazib berish haqida</a></li>
                 <li><a href="#">To’lov usullari haqida</a></li>
             </ul>
-            <ul>
+            <ul class="site-footer-links">
                 <li><a href="#">Bo’sh ish o’rinlari</a></li>
                 <li><a href="#">Biz bilan bog’lanish</a></li>
                 <li><a href="#">Maxfiylik nizomi</a></li>
