Add css comments and codes have been corrected

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </li>
             </ul>
         </section>
-        <!-- Aksiya -->
+        <!-- Promo -->
         <section class="promo">
             <div class="promo-content">
                 <h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
