--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         <a href="#">
             <img src="./img/logo.png" alt="Akademnashr logo" width="227" height="60">
         </a>
-        <nav class="sitenav">
-            <ul class="sitenav-list">
-                <li class="sitenav-link"><a href="#">Bosh sahifa</a></li>
-                <li class="sitenav-link"><a href="#">Kitoblar</a></li>
-                <li class="sitenav-link"><a href="#">Aksiyalar</a></li>
-                <li class="sitenav-link"><a href="#">Kontaktlar</a></li>
-            </ul>
-        </nav>
-        <a href="#" class="main-link">Ro'yhatdan o'tish</a>
+        <div class="site-header-actions">
+            <nav class="sitenav">
+                <ul class="sitenav-list">
+                    <li class="sitenav-link"><a href="#">Bosh sahifa</a></li>
+                    <li class="sitenav-link"><a href="#">Kitoblar</a></li>
+                    <li class="sitenav-link"><a href="#">Aksiyalar</a></li>
+                    <li class="sitenav-link"><a href="#">Kontaktlar</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="main-link">Ro'yhatdan o'tish</a>
+        </div>
     </header>
 
     <hr>
@@ -47,7 +49,7 @@
         <section class="features">
             <hr class="orange-line">
             <h2 class="features-heading">Nega aynan Akademnashr?</h2>
-            <ul>
+            <ul class="features-list">
                 <li class="feature">
                     <div class="feature-icon-wrapper"><img src="./img/cursor-click.svg" alt=""></div>
                     <h3 class="feature-title">Oson buyurtma qilish</h3>
@@ -91,11 +93,11 @@
 
     <!-- Site Footer  -->
     <footer class="site-footer">
-        <div>
+        <div class="site-footer-top">
             <a href="index.html">
                 <img src="./img/logo.png" alt="Akademnashr logo" width="227" height="60">
             </a>
-            <ul>
+            <ul class="site-footer-socials">
                 <li>
                     <a href="https://t.me/Akademnashr" target="_blank">
                         <img src="./img/icon-telegram.svg" alt="Telegram icon">
@@ -115,7 +117,7 @@
             </ul>
         </div>
         <hr class="site-footer-divider">
-        <div>
+        <div class="site-footer-bottom">
 
             <ul class="site-footer-links">
                 <li>
