--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <!-- Navigation Header -->
     <header class="site-header">
-        <a href="#">
+        <a href="#" class="site-logo">
             <img src="./img/logo.png" alt="Akademnashr logo" width="227" height="60">
         </a>
         <div class="site-header-actions">
             <nav class="sitenav">
                 <ul class="sitenav-list">
-                    <li class="sitenav-link"><a href="#">Bosh sahifa</a></li>
-                    <li class="sitenav-link"><a href="#">Kitoblar</a></li>
-                    <li class="sitenav-link"><a href="#">Aksiyalar</a></li>
-                    <li class="sitenav-link"><a href="#">Kontaktlar</a></li>
+                    <li class="sitenav-link  site-links"><a href="#">Bosh sahifa</a></li>
+                    <li class="sitenav-link  site-links"><a href="#">Kitoblar</a></li>
+                    <li class="sitenav-link  site-links"><a href="#">Aksiyalar</a></li>
+                    <li class="sitenav-link  site-links"><a href="#">Kontaktlar</a></li>
                 </ul>
             </nav>
             <a href="#" class="main-link">Ro'yhatdan o'tish</a>
@@ -94,7 +94,7 @@
     <!-- Site Footer  -->
     <footer class="site-footer">
         <div class="site-footer-top">
-            <a href="index.html">
+            <a href="index.html" class="site-logo">
                 <img src="./img/logo.png" alt="Akademnashr logo" width="227" height="60">
             </a>
             <ul class="site-footer-socials">
@@ -137,23 +137,23 @@
                 </li>
             </ul>
             <ul class="site-footer-links">
-                <li><a href="#">Ilmiy nashrlar</a></li>
-                <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
-                <li><a href="#">Ma’rifiy nashrlar</a></li>
-                <li><a href="#">Lug’atlar</a></li>
-                <li><a href="#">Adabiy-badiiy nashrlar</a></li>
-                <li><a href="#">Abituriyentlar uchun</a></li>
-                <li><a href="#">Bolalar uchun</a></li>
+                <li class="site-links"><a href="#">Ilmiy nashrlar</a></li>
+                <li class="site-links"><a href="#">Ilmiy-ommabop nashrlar</a></li>
+                <li class="site-links"><a href="#">Ma’rifiy nashrlar</a></li>
+                <li class="site-links"><a href="#">Lug’atlar</a></li>
+                <li class="site-links"><a href="#">Adabiy-badiiy nashrlar</a></li>
+                <li class="site-links"><a href="#">Abituriyentlar uchun</a></li>
+                <li class="site-links"><a href="#">Bolalar uchun</a></li>
             </ul>
             <ul class="site-footer-links">
-                <li><a href="#">Ko’p so’raladigan savollar</a></li>
-                <li><a href="#">Yetkazib berish haqida</a></li>
-                <li><a href="#">To’lov usullari haqida</a></li>
+                <li class="site-links"><a href="#">Ko’p so’raladigan savollar</a></li>
+                <li class="site-links"><a href="#">Yetkazib berish haqida</a></li>
+                <li class="site-links"><a href="#">To’lov usullari haqida</a></li>
             </ul>
             <ul class="site-footer-links">
-                <li><a href="#">Bo’sh ish o’rinlari</a></li>
-                <li><a href="#">Biz bilan bog’lanish</a></li>
-                <li><a href="#">Maxfiylik nizomi</a></li>
+                <li class="site-links"><a href="#">Bo’sh ish o’rinlari</a></li>
+                <li class="site-links"><a href="#">Biz bilan bog’lanish</a></li>
+                <li class="site-links"><a href="#">Maxfiylik nizomi</a></li>
             </ul>
 
         </div>
