Add outline, padding, border and border-radius

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="site-header-actions">
             <nav class="sitenav">
                 <ul class="sitenav-list">
-                    <li class="sitenav-link  site-links"><a href="#">Bosh sahifa</a></li>
-                    <li class="sitenav-link  site-links"><a href="#">Kitoblar</a></li>
-                    <li class="sitenav-link  site-links"><a href="#">Aksiyalar</a></li>
-                    <li class="sitenav-link  site-links"><a href="#">Kontaktlar</a></li>
+                    <li class="sitenav-link"><a href="#">Bosh sahifa</a></li>
+                    <li class="sitenav-link"><a href="#">Kitoblar</a></li>
+                    <li class="sitenav-link"><a href="#">Aksiyalar</a></li>
+                    <li class="sitenav-link"><a href="#">Kontaktlar</a></li>
                 </ul>
             </nav>
             <a href="#" class="main-link">Ro'yhatdan o'tish</a>
@@ -120,40 +120,40 @@
         <div class="site-footer-bottom">
 
             <ul class="site-footer-links">
-                <li>
+                <li class="site-footer-lists">
                     <a href="#">Bosh sahifa</a>
                 </li>
-                <li>
+                <li class="site-footer-lists">
                     <a href="#">Kitoblar</a>
                 </li>
-                <li>
+                <li class="site-footer-lists">
                     <a href="#">Aksiyalar</a>
                 </li>
-                <li>
+                <li class="site-footer-lists">
                     <a href="#">Yangiliklar</a>
                 </li>
-                <li>
+                <li class="site-footer-lists">
                     <a href="#">Kontaktlar</a>
                 </li>
             </ul>
             <ul class="site-footer-links">
-                <li class="site-links"><a href="#">Ilmiy nashrlar</a></li>
-                <li class="site-links"><a href="#">Ilmiy-ommabop nashrlar</a></li>
-                <li class="site-links"><a href="#">Ma’rifiy nashrlar</a></li>
-                <li class="site-links"><a href="#">Lug’atlar</a></li>
-                <li class="site-links"><a href="#">Adabiy-badiiy nashrlar</a></li>
-                <li class="site-links"><a href="#">Abituriyentlar uchun</a></li>
-                <li class="site-links"><a href="#">Bolalar uchun</a></li>
+                <li class="site-footer-lists"><a href="#">Ilmiy nashrlar</a></li>
+                <li class="site-footer-lists"><a href="#">Ilmiy-ommabop nashrlar</a></li>
+                <li class="site-footer-lists"><a href="#">Ma’rifiy nashrlar</a></li>
+                <li class="site-footer-lists"><a href="#">Lug’atlar</a></li>
+                <li class="site-footer-lists"><a href="#">Adabiy-badiiy nashrlar</a></li>
+                <li class="site-footer-lists"><a href="#">Abituriyentlar uchun</a></li>
+                <li class="site-footer-lists"><a href="#">Bolalar uchun</a></li>
             </ul>
             <ul class="site-footer-links">
-                <li class="site-links"><a href="#">Ko’p so’raladigan savollar</a></li>
-                <li class="site-links"><a href="#">Yetkazib berish haqida</a></li>
-                <li class="site-links"><a href="#">To’lov usullari haqida</a></li>
+                <li class="site-footer-lists"><a href="#">Ko’p so’raladigan savollar</a></li>
+                <li class="site-footer-lists"><a href="#">Yetkazib berish haqida</a></li>
+                <li class="site-footer-lists"><a href="#">To’lov usullari haqida</a></li>
             </ul>
             <ul class="site-footer-links">
-                <li class="site-links"><a href="#">Bo’sh ish o’rinlari</a></li>
-                <li class="site-links"><a href="#">Biz bilan bog’lanish</a></li>
-                <li class="site-links"><a href="#">Maxfiylik nizomi</a></li>
+                <li class="site-footer-lists"><a href="#">Bo’sh ish o’rinlari</a></li>
+                <li class="site-footer-lists"><a href="#">Biz bilan bog’lanish</a></li>
+                <li class="site-footer-lists"><a href="#">Maxfiylik nizomi</a></li>
             </ul>
 
         </div>
