Add normalizecss file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akademnashr</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -77,14 +78,13 @@
         <section class="promo">
             <div class="promo-content">
                 <h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-                <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq
-                    qo’llanmalari va komikslar.
-                </p>
-                <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta
-                        kitob</strong>ni<strong class="promo-"> 350 ming</strong> so’mga (aslida 383 ming so’m) sotib
-                    olishingiz
-                    mumkin.
-                </p>
+                <div class="promo-text-div">
+                    <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashqqo’llanmalari va komikslar.
+                    </p>
+                    <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta
+                            kitob</strong>ni<strong class="promo-"> 350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.
+                    </p>
+                </div>
                 <a class="main-link" href="#">Buyurtma berish</a>
             </div>
             <img class="promo-img" src="./img/sale-img.png" alt="Books" width="440" height="440">
