--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="site-header-actions">
             <nav class="sitenav">
                 <ul class="sitenav-list">
-                    <li class="sitenav-link"><a href="#">Bosh sahifa</a></li>
-                    <li class="sitenav-link"><a href="#">Kitoblar</a></li>
-                    <li class="sitenav-link"><a href="#">Aksiyalar</a></li>
-                    <li class="sitenav-link"><a href="#">Kontaktlar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Bosh sahifa</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
                 </ul>
             </nav>
             <a href="#" class="main-link">Ro'yhatdan o'tish</a>
@@ -78,7 +78,7 @@
         <section class="promo">
             <div class="promo-content">
                 <h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-                <div class="promo-text-div">
+                <div class="promo-info-wrapper">
                     <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashqqo’llanmalari va komikslar.
                     </p>
                     <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta
