--- a/index.html
+++ b/index.html
@@ -35,11 +35,8 @@
         <section class="hero">
             <div class="hero-content">
                 <hr class="orange-line">
-                <h2 class="hero-heading">Pythonda dasturlash <br>asoslari
-                </h2>
-                <p class="hero-text"> Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma.
-                    <br>Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib,
-                    <br>ularga kitobda ko‘rsatilgan kod orqali o‘tish mumkin.
+                <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
+                <p class="hero-text"> Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan kod orqali o‘tish mumkin.
                 </p>
                 <a class="main-link" href="#">Buyurtma berish</a>
             </div>
@@ -48,31 +45,33 @@
         </section>
         <!-- FEATURES -->
         <section class="features">
-            <hr class="orange-line">
-            <h2 class="features-heading">Nega aynan Akademnashr?</h2>
-            <ul class="features-list">
-                <li class="feature">
-                    <div class="feature-icon-wrapper"><img src="./img/cursor-click.svg" alt=""></div>
-                    <h3 class="feature-title">Oson buyurtma qilish</h3>
-                    <p class="feature-info">Eng sara kitoblar
-                        Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz..</p>
-                </li>
-                <li class="feature">
-                    <div class="feature-icon-wrapper"><img src="./img/sparkles.svg" alt=""></div>
-                    <h3 class="feature-title">Eng sara kitoblar</h3>
-                    <p class="feature-info">
-                        Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa
-                        olasiz.</p>
-                </li>
-                <li class="feature">
-                    <div class="feature-icon-wrapper"><img src="./img/lightning-bolt.svg" alt=""></div>
-                    <h3 class="feature-title">Tez yetkazib berish</h3>
-                    <p class="feature-info">
-                        O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida
-                        yetkazib beriladi.
-                    </p>
-                </li>
-            </ul>
+            <div class="container">
+                <hr class="orange-line">
+                <h2 class="features-heading">Nega aynan Akademnashr?</h2>
+                <ul class="features-list">
+                    <li class="feature">
+                        <div class="feature-icon-wrapper"><img src="./img/cursor-click.svg" alt=""></div>
+                        <h3 class="feature-title">Oson buyurtma qilish</h3>
+                        <p class="feature-info">Eng sara kitoblar
+                            Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz..</p>
+                    </li>
+                    <li class="feature">
+                        <div class="feature-icon-wrapper"><img src="./img/sparkles.svg" alt=""></div>
+                        <h3 class="feature-title">Eng sara kitoblar</h3>
+                        <p class="feature-info">
+                            Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa
+                            olasiz.</p>
+                    </li>
+                    <li class="feature">
+                        <div class="feature-icon-wrapper"><img src="./img/lightning-bolt.svg" alt=""></div>
+                        <h3 class="feature-title">Tez yetkazib berish</h3>
+                        <p class="feature-info">
+                            O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida
+                            yetkazib beriladi.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- Promo -->
         <section class="promo">
