--- a/index.html
+++ b/index.html
@@ -1,163 +1,91 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akademnashr</title>
+    <title>CSS-starter</title>
 
-    <!-- <link rel="stylesheet" href="./styles/normalize.css"> -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
-    <link rel="stylesheet" href="./styles/style-min.css">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+
+    <!-- Styles  -->
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-    <!-- Navigation Header -->
-    <header class="site-header">
-        <a href="#" class="site-logo">
-            <img src="./img/logo.png" alt="Akademnashr logo" width="227" height="60">
-        </a>
-        <div class="site-header-actions">
-            <nav class="sitenav">
-                <ul class="sitenav-list">
-                    <li class="sitenav-item"><a class="sitenav-link" href="#">Bosh sahifa</a></li>
-                    <li class="sitenav-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
-                    <li class="sitenav-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
-                    <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+    <!-- HEADER CONTENT -->
+    <header class="header">
+        <div class="header__container container">
+            <a class="header__logo" href="#">
+                <svg width="227" height="60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#a)">
+                        <path d="M19 0 0 13.65v35l10.53 10.53-.23-36.76 8.7-7.11 8.7 7.11-.23 36.76L38 48.65v-35L19 0Z"
+                            fill="#252420" />
+                        <path d="m26 29.6-7 4.2-7-4.2v12.25l7 4.2 7-4.2V29.6Z" fill="#FF7401" />
+                    </g>
+                    <path
+                        d="M62.69 35.94h-6.27l-1.22 4.65h-4.86l7.11-22.75h4.2l7.16 22.75h-4.9l-1.22-4.65Zm-5.27-3.83h4.25L59.55 24l-2.13 8.1Zm18.92 1.97-1.18 1.32v5.2h-4.43v-24h4.43v12.96l.54-.81 3.07-5.06h5.26l-4.9 6.96 5.37 9.94h-5.06l-3.1-6.51Zm17.74 6.51c-.13-.26-.25-.7-.38-1.31a3.78 3.78 0 0 1-3.22 1.62c-1.41 0-2.59-.46-3.53-1.4a4.96 4.96 0 0 1-1.39-3.64c0-1.77.56-3.14 1.69-4.11 1.14-.97 2.77-1.47 4.9-1.49h1.33V28.9c0-.76-.13-1.3-.39-1.6-.26-.32-.64-.47-1.14-.47-1.1 0-1.65.64-1.65 1.93h-4.42c0-1.56.58-2.85 1.75-3.86a6.55 6.55 0 0 1 4.45-1.53c1.85 0 3.28.49 4.3 1.46 1.02.95 1.53 2.33 1.53 4.12v7.95c.02 1.46.23 2.6.62 3.43v.26h-4.45Zm-2.61-3.15c.49 0 .9-.1 1.25-.3.34-.2.6-.43.76-.7v-3.52h-1.06a2.3 2.3 0 0 0-1.78.72 2.78 2.78 0 0 0-.64 1.92c0 1.25.49 1.88 1.47 1.88Zm9.05-5.82c0-2.77.46-4.84 1.4-6.2a4.65 4.65 0 0 1 4.1-2.05c1.3 0 2.38.57 3.25 1.7v-8.48h4.45v24h-4.02l-.2-1.72c-.9 1.36-2.07 2.03-3.5 2.03a4.63 4.63 0 0 1-4.06-2.03c-.93-1.35-1.4-3.34-1.42-5.97v-1.28Zm4.43 1.11c0 1.67.18 2.84.53 3.5.36.66.96.99 1.8.99.88 0 1.54-.4 1.99-1.17v-7.72c-.44-.84-1.1-1.25-1.97-1.25-.82 0-1.4.32-1.78.98-.38.66-.57 1.82-.57 3.5v1.17Zm18.86 8.17c-2.27 0-4.04-.67-5.31-2.03-1.27-1.35-1.9-3.29-1.9-5.8v-1.35c0-2.67.58-4.73 1.74-6.17 1.17-1.45 2.84-2.18 5.02-2.18 2.12 0 3.72.69 4.8 2.05 1.07 1.35 1.62 3.36 1.64 6.03v2.17H121c.06 1.25.34 2.17.83 2.75.49.58 1.24.86 2.26.86 1.48 0 2.72-.5 3.7-1.51l1.74 2.67a5.77 5.77 0 0 1-2.36 1.83 8.18 8.18 0 0 1-3.36.68Zm-2.78-10.37h4.42v-.4a4.72 4.72 0 0 0-.5-2.3c-.3-.52-.85-.78-1.62-.78-.77 0-1.33.27-1.69.82a5.78 5.78 0 0 0-.6 2.66Zm15.42-6.84.13 1.56a4.76 4.76 0 0 1 3.92-1.88c1.69 0 2.88.76 3.58 2.28a4.63 4.63 0 0 1 4.14-2.28c2.96 0 4.47 2.05 4.55 6.14V40.6h-4.43V29.8c0-.97-.13-1.67-.4-2.09-.27-.42-.73-.62-1.38-.62-.82 0-1.44.5-1.84 1.51l.03.53V40.6h-4.42V29.83a4.2 4.2 0 0 0-.4-2.1c-.25-.43-.72-.65-1.38-.65-.76 0-1.37.4-1.82 1.23V40.6h-4.42V23.7h4.14Z"
+                        fill="#252420" />
+                    <path
+                        d="m160.1 23.69.12 1.67c1-1.33 2.3-1.99 3.92-1.99 2.9 0 4.4 2.04 4.49 6.11V40.6h-4.44V29.81c0-.96-.15-1.65-.44-2.08-.28-.43-.78-.65-1.5-.65-.8 0-1.43.4-1.88 1.23V40.6h-4.43V23.7h4.15Zm19.73 16.9c-.13-.26-.25-.7-.38-1.31a3.78 3.78 0 0 1-3.22 1.62c-1.41 0-2.59-.46-3.53-1.4a4.96 4.96 0 0 1-1.39-3.64c0-1.77.56-3.14 1.69-4.11 1.13-.97 2.77-1.47 4.9-1.49h1.33V28.9c0-.76-.13-1.3-.39-1.6-.26-.32-.64-.47-1.14-.47-1.1 0-1.65.64-1.65 1.93h-4.43c0-1.56.59-2.85 1.75-3.86a6.55 6.55 0 0 1 4.46-1.53c1.85 0 3.28.49 4.3 1.46 1.02.95 1.53 2.33 1.53 4.12v7.95c.02 1.46.22 2.6.62 3.43v.26h-4.45Zm-2.61-3.15c.49 0 .9-.1 1.25-.3.34-.2.6-.43.76-.7v-3.52h-1.06a2.3 2.3 0 0 0-1.78.72 2.78 2.78 0 0 0-.64 1.92c0 1.25.49 1.88 1.47 1.88Zm17.12-1.38c0-.37-.18-.72-.54-1.03-.36-.32-1.15-.76-2.4-1.3-1.82-.74-3.07-1.5-3.76-2.3a4.39 4.39 0 0 1-1.01-2.95c0-1.48.53-2.7 1.59-3.65a6.1 6.1 0 0 1 4.25-1.46 6.6 6.6 0 0 1 4.45 1.44 4.83 4.83 0 0 1 1.67 3.86h-4.42c0-1.37-.57-2.06-1.72-2.06-.47 0-.85.14-1.15.44-.3.29-.46.7-.46 1.21 0 .38.17.71.5 1 .34.29 1.12.7 2.36 1.22 1.8.67 3.08 1.41 3.82 2.24a4.5 4.5 0 0 1 1.12 3.17c0 1.5-.57 2.72-1.7 3.64a6.9 6.9 0 0 1-4.47 1.37 7.17 7.17 0 0 1-3.28-.71 5.62 5.62 0 0 1-2.24-2.04c-.53-.86-.8-1.8-.8-2.8h4.2c.03.78.2 1.36.54 1.74.34.39.9.58 1.67.58 1.19 0 1.78-.54 1.78-1.6Zm11.36-10.89a4.37 4.37 0 0 1 3.53-1.8 4.1 4.1 0 0 1 3.52 1.63c.8 1.08 1.2 2.7 1.22 4.84V40.6h-4.44V29.9c0-1-.16-1.7-.47-2.14-.3-.45-.8-.67-1.48-.67-.8 0-1.43.37-1.88 1.1V40.6h-4.42v-24h4.42v8.58Zm19.78 2.78-1.46-.12c-1.21 0-2.03.53-2.46 1.59v11.17h-4.44V23.7h4.18l.12 1.82c.7-1.42 1.66-2.14 2.9-2.14.5 0 .9.07 1.21.2l-.05 4.38Z"
+                        fill="#FF7500" />
+                    <defs>
+                        <clipPath id="a">
+                            <path fill="#fff" d="M0 0h38v59.18H0z" />
+                        </clipPath>
+                    </defs>
+                </svg>
+            </a>
+            <nav class="header__navigator">
+                <ul class="header__list">
+                    <li class="header__list-item">
+                        <a class="header__nav-link" href="#">Bosh sahifa</a>
+                    </li>
+                    <li class="header__list-item">
+                        <a class="header__nav-link" href="#">Kitoblar</a>
+                    </li>
+                    <li class="header__list-item">
+                        <a class="header__nav-link" href="#">Aksiyalar</a>
+                    </li>
+                    <li class="header__list-item">
+                        <a class="header__nav-link" href="#">Kontaktlar</a>
+                    </li>
+                    <li class="header__list-item">
+                        <a class="header__nav-link button-link" href="#">Ro’yxatdan o’tish</a>
+                    </li>
                 </ul>
             </nav>
-            <a href="#" class="main-link">Ro'yhatdan o'tish</a>
+
         </div>
     </header>
 
-    <hr>
-
-    <main>
-        <!-- HERO -->
-        <section class="hero">
-            <div class="hero-content">
-                <hr class="orange-line">
-                <h2 class="hero-heading">Pythonda dasturlash asoslari</h2>
-                <p class="hero-text"> Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan kod orqali o‘tish mumkin.
-                </p>
-                <a class="main-link" href="#">Buyurtma berish</a>
-            </div>
-
-            <img class="hero-img" src="/img/python-book.jpg" alt="Python book">
-        </section>
-        <!-- FEATURES -->
-        <section class="features">
-            <div class="container">
-                <hr class="orange-line">
-                <h2 class="features-heading">Nega aynan Akademnashr?</h2>
-                <ul class="features-list">
-                    <li class="feature">
-                        <div class="feature-icon-wrapper"><img src="./img/cursor-click.svg" alt=""></div>
-                        <h3 class="feature-title">Oson buyurtma qilish</h3>
-                        <p class="feature-info">Eng sara kitoblar
-                            Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz..</p>
-                    </li>
-                    <li class="feature">
-                        <div class="feature-icon-wrapper"><img src="./img/sparkles.svg" alt=""></div>
-                        <h3 class="feature-title">Eng sara kitoblar</h3>
-                        <p class="feature-info">
-                            Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa
-                            olasiz.</p>
-                    </li>
-                    <li class="feature">
-                        <div class="feature-icon-wrapper"><img src="./img/lightning-bolt.svg" alt=""></div>
-                        <h3 class="feature-title">Tez yetkazib berish</h3>
-                        <p class="feature-info">
-                            O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida
-                            yetkazib beriladi.
-                        </p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!-- Promo -->
-        <section class="promo">
-            <div class="promo-content">
-                <h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-                <div class="promo-info-wrapper">
-                    <p class="promo-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashqqo’llanmalari va komikslar.
+    <!-- MAIN CONTENT -->
+    <main class="main-content">
+        <!-- About section -->
+        <section class="about">
+            <div class="about__container container">
+                <div class="about__info-wrapper">
+                    <h2 class="about__info-title">
+                        Pythonda dasturlash<br>asoslari
+                    </h2>
+                    <p class="about__info-paragraph">
+                        Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.
                     </p>
-                    <p class="promo-text">Aksiyadagi eng katta to’plamda <strong class="promo-highlight">50 ta
-                            kitob</strong>ni<strong class="promo-"> 350 ming</strong> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.
-                    </p>
+                    <a class="button-link" href="#">Ro’yxatdan o’tish</a>
                 </div>
-                <a class="main-link" href="#">Buyurtma berish</a>
             </div>
-            <img class="promo-img" src="./img/sale-img.png" alt="Books" width="440" height="440">
         </section>
     </main>
 
-    <!-- Site Footer  -->
-    <footer class="site-footer">
-        <div class="site-footer-top">
-            <a href="index.html" class="site-logo">
-                <img src="./img/logo.png" alt="Akademnashr logo" width="227" height="60">
-            </a>
-            <ul class="site-footer-socials">
-                <li>
-                    <a href="https://t.me/Akademnashr" target="_blank">
-                        <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0Zm5.568 8.16c-.18 1.896-.96 6.504-1.356 8.628-.168.9-.504 1.2-.816 1.236-.696.06-1.224-.456-1.896-.9-1.056-.696-1.656-1.128-2.676-1.8-1.188-.78-.42-1.212.264-1.908.18-.18 3.252-2.976 3.312-3.228a.24.24 0 0 0-.06-.216c-.072-.06-.168-.036-.252-.024-.108.024-1.788 1.14-5.064 3.348-.48.324-.912.492-1.296.48-.432-.012-1.248-.24-1.86-.444-.756-.24-1.344-.372-1.296-.792.024-.216.324-.432.888-.66 3.504-1.524 5.832-2.532 6.996-3.012 3.336-1.392 4.02-1.632 4.476-1.632.096 0 .324.024.468.144.12.096.156.228.168.324-.012.072.012.288 0 .456Z" fill="currentColor"/></svg>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/Akademnashr?mibextid=ZbWKwL" target="_blank">
-                        <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0Z" fill="currentColor"/></svg>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/akademnashr?igsh=MWV1Ynl1ZHZoZ25rbg=="
-                        target="_blank">
-                        <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0Zm0 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069ZM5.838 12a6.162 6.162 0 1 1 12.324 0 6.162 6.162 0 0 1-12.324 0ZM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8Zm4.965-10.405a1.44 1.44 0 1 1 2.881.001 1.44 1.44 0 0 1-2.881-.001Z" fill="currentColor"/></svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <hr class="site-footer-divider">
-        <div class="site-footer-bottom">
 
-            <ul class="site-footer-links">
-                <li class="site-footer-lists">
-                    <a href="#">Bosh sahifa</a>
-                </li>
-                <li class="site-footer-lists">
-                    <a href="#">Kitoblar</a>
-                </li>
-                <li class="site-footer-lists">
-                    <a href="#">Aksiyalar</a>
-                </li>
-                <li class="site-footer-lists">
-                    <a href="#">Yangiliklar</a>
-                </li>
-                <li class="site-footer-lists">
-                    <a href="#">Kontaktlar</a>
-                </li>
-            </ul>
-            <ul class="site-footer-links">
-                <li class="site-footer-lists"><a href="#">Ilmiy nashrlar</a></li>
-                <li class="site-footer-lists"><a href="#">Ilmiy-ommabop nashrlar</a></li>
-                <li class="site-footer-lists"><a href="#">Ma’rifiy nashrlar</a></li>
-                <li class="site-footer-lists"><a href="#">Lug’atlar</a></li>
-                <li class="site-footer-lists"><a href="#">Adabiy-badiiy nashrlar</a></li>
-                <li class="site-footer-lists"><a href="#">Abituriyentlar uchun</a></li>
-                <li class="site-footer-lists"><a href="#">Bolalar uchun</a></li>
-            </ul>
-            <ul class="site-footer-links">
-                <li class="site-footer-lists"><a href="#">Ko’p so’raladigan savollar</a></li>
-                <li class="site-footer-lists"><a href="#">Yetkazib berish haqida</a></li>
-                <li class="site-footer-lists"><a href="#">To’lov usullari haqida</a></li>
-            </ul>
-            <ul class="site-footer-links">
-                <li class="site-footer-lists"><a href="#">Bo’sh ish o’rinlari</a></li>
-                <li class="site-footer-lists"><a href="#">Biz bilan bog’lanish</a></li>
-                <li class="site-footer-lists"><a href="#">Maxfiylik nizomi</a></li>
-            </ul>
 
-        </div>
-    </footer>
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
