--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS-starter</title>
+    <title>Akademnashr</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,6 +71,7 @@
         <section class="about">
             <div class="about__container container">
                 <div class="about__info-wrapper">
+                    <hr class="about__info-roll">
                     <h2 class="about__info-title">
                         Pythonda dasturlash<br>asoslari
                     </h2>
@@ -79,6 +80,7 @@
                     </p>
                     <a class="button-link" href="#">Ro’yxatdan o’tish</a>
                 </div>
+                <img class="about__img" src="./img/python-book.jpg" alt="Python-book">
             </div>
         </section>
     </main>
