--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
     <!-- Styles  -->
     <link rel="stylesheet" href="./styles/normalize.css">
@@ -76,11 +76,47 @@
                         Pythonda dasturlash<br>asoslari
                     </h2>
                     <p class="about__info-paragraph">
-                        Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.
+                        Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi
+                        uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish
+                        mumkin.
                     </p>
                     <a class="button-link" href="#">Ro’yxatdan o’tish</a>
                 </div>
                 <img class="about__img" src="./img/python-book.jpg" alt="Python-book">
+            </div>
+        </section>
+
+        <!-- Features section -->
+        <section class="features">
+            <div class="features__container container">
+                <hr class="about__info-roll">
+                <h2 class="features__title">
+                    Nega aynan<br>Akademnashr?
+                </h2>
+                <ul class="features__list">
+                    <li class="feature__list-item">
+                        <div class="feature__icon-wrapper">
+                            <img src="./img/cursor-click.svg" alt="" width="56" height="56">
+                        </div>
+                        <h3 class="feature__title">Oson buyurtma qilish</h3>
+                        <p class="feature__info">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+                    </li>
+                    <li class="feature__list-item">
+                        <div class="feature__icon-wrapper">
+                            <img src="./img/sparkles.svg" alt="" width="56" height="56">
+                        </div>
+                        <h3 class="feature__title">Eng sara kitoblar</h3>
+                        <p class="feature__info">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+                    </li>
+                    <li class="feature__list-item">
+                        <div class="feature__icon-wrapper">
+                            <img src="./img/lightning-bolt.svg" alt="" width="56" height="56">
+                        </div>
+                        <h3 class="feature__title">Tez yetkazib berish</h3>
+                        <p class="feature__info">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro
+                            buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
