--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
                 </ul>
             </div>
         </section>
+
+        <!-- Promo section -->
+        <section class="promo">
+            <div class="promo__container container">
+                <div class="promo__info-wrapper">
+                    <h2 class="promo__title">
+                        Bolalar kitoblari uchun<br>ajoyib aksiya!
+                    </h2>
+                    <p class="promo__paragraph">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish<br>uchun turli mashq qo’llanmalari va komikslar.</p>
+                    <p class="promo__paragraph">Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming<br>so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+                    <a class="promo__link" href="#">Ro’yxatdan o’tish</a>
+                </div>
+                <img class="promo__img" src="./img/python-book.jpg" alt="python-book">
+            </div>
+        </section>
     </main>
 
 
