--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- HEADER CONTENT -->
-    <header class="header">
+    <header class="header" style="display: none;">
         <div class="header__container container">
             <a class="header__logo" href="#">
                 <svg width="227" height="60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -68,7 +68,7 @@
     <!-- MAIN CONTENT -->
     <main class="main-content">
         <!-- About section -->
-        <section class="about">
+        <section class="about" style="display: none;">
             <div class="about__container container">
                 <div class="about__info-wrapper">
                     <hr class="about__info-roll">
@@ -99,8 +99,7 @@
                             <img src="./img/cursor-click.svg" alt="" width="56" height="56">
                         </div>
                         <h3 class="feature__title">Oson buyurtma qilish</h3>
-                        <p class="feature__info">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma
-                            qila olasiz.</p>
+                        <p class="feature__info">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
                     </li>
                     <li class="feature__list-item">
                         <div class="feature__icon-wrapper">
@@ -123,7 +122,7 @@
         </section>
 
         <!-- Promo section -->
-        <section class="promo">
+        <section class="promo" style="display: none;">
             <div class="promo__container container">
                 <div class="promo__info-wrapper">
                     <h2 class="promo__title">
@@ -135,7 +134,7 @@
                         383 ming so’m) sotib olishingiz mumkin.</p>
                     <a class="promo__link" href="#">Ro’yxatdan o’tish</a>
                 </div>
-                <img class="promo__img" src="./img/python-book.jpg" alt="python-book">
+                <img class="promo__img" src="./img/sale-img.png" alt="python-book">
             </div>
         </section>
     </main>
