About section responsived

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- MAIN CONTENT -->
     <main class="main-content">
         <!-- About section -->
-        <section class="about" style="display: none;">
+        <section class="about">
             <div class="about__container container">
                 <div class="about__info-wrapper">
                     <hr class="about__info-roll">
