Promo section responsived

--- a/index.html
+++ b/index.html
@@ -122,19 +122,21 @@
         </section>
 
         <!-- Promo section -->
-        <section class="promo" style="display: none;">
+        <section class="promo">
             <div class="promo__container container">
-                <div class="promo__info-wrapper">
-                    <h2 class="promo__title">
-                        Bolalar kitoblari uchun<br>ajoyib aksiya!
-                    </h2>
-                    <p class="promo__paragraph">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish<br>uchun
-                        turli mashq qo’llanmalari va komikslar.</p>
-                    <p class="promo__paragraph">Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming<br>so’mga (aslida
-                        383 ming so’m) sotib olishingiz mumkin.</p>
-                    <a class="promo__link" href="#">Ro’yxatdan o’tish</a>
+                <div class="promo__inner">
+                    <div class="promo__info-wrapper">
+                        <h2 class="promo__title">
+                            Bolalar kitoblari uchun<br>ajoyib aksiya!
+                        </h2>
+                        <div class="promo__paragraph-wrapper">
+                            <p class="promo__paragraph">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish<br>uchun turli mashq qo’llanmalari va komikslar.</p>
+                            <p class="promo__paragraph">Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming<br>so’mga (aslida  383 ming so’m) sotib olishingiz mumkin.</p>
+                        </div>
+                        <a class="promo__link" href="#">Ro’yxatdan o’tish</a>
+                    </div>
+                    <img class="promo__img" src="./img/sale-img.png" alt="python-book">
                 </div>
-                <img class="promo__img" src="./img/sale-img.png" alt="python-book">
             </div>
         </section>
     </main>
