Header content responsived

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- HEADER CONTENT -->
-    <header class="header" style="display: none;">
+    <header class="header">
         <div class="header__container container">
             <a class="header__logo" href="#">
                 <svg width="227" height="60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -42,26 +42,25 @@
                     </defs>
                 </svg>
             </a>
-            <nav class="header__navigator">
-                <ul class="header__list">
-                    <li class="header__list-item">
-                        <a class="header__nav-link" href="#">Bosh sahifa</a>
-                    </li>
-                    <li class="header__list-item">
-                        <a class="header__nav-link" href="#">Kitoblar</a>
-                    </li>
-                    <li class="header__list-item">
-                        <a class="header__nav-link" href="#">Aksiyalar</a>
-                    </li>
-                    <li class="header__list-item">
-                        <a class="header__nav-link" href="#">Kontaktlar</a>
-                    </li>
-                    <li class="header__list-item">
-                        <a class="header__nav-link button-link" href="#">Ro’yxatdan o’tish</a>
-                    </li>
-                </ul>
-            </nav>
-
+            <div class="header__actions">
+                <nav class="header__navigator">
+                    <ul class="header__list">
+                        <li class="header__list-item">
+                            <a class="header__nav-link" href="#">Bosh sahifa</a>
+                        </li>
+                        <li class="header__list-item">
+                            <a class="header__nav-link" href="#">Kitoblar</a>
+                        </li>
+                        <li class="header__list-item">
+                            <a class="header__nav-link" href="#">Aksiyalar</a>
+                        </li>
+                        <li class="header__list-item">
+                            <a class="header__nav-link" href="#">Kontaktlar</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a class="header__nav-link button-link" href="#">Ro’yxatdan o’tish</a>
+            </div>
         </div>
     </header>
 
